<resources>
    <!-- Suffix after '-' must be the app package name as specified in the build.gradle file. This
       is used by the com.amazonaws.mobile.downloader.query.DownloadQueueProvider class. -->
    <string name="download_queue_provider_authority">com.amazonaws.mobile.downloader-com.amazon.mysampleapp</string>
    <!-- This can be anything, but it should be unique to the app. -->
    <string name="content_file_provider_authority">com.mysampleapp.fileprovider</string>

    <string name="app_name">TravelBuy</string>
    <string name="home_tab">Home</string>
    <string name="buy_tab">Buy</string>
    <string name="sell_tab">Sell</string>
    <string name="friend_tab">Friends</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="nearby_vendors">Nearby Vendors</string>
    <string name="search_items">Search For Items</string>
    <string name="messages_with_vendors">Messages With Vendors</string>
    <string name="create_login_shop">Create/Login Shop</string>
    <string name="manage_items">Manage Items</string>
    <string name="close_shop">Close Shop</string>
    <string name="open_shop">Open Shop</string>
    <string name="extend_shop_time">Extend Shop Time</string>
    <string name="messages_with_customers">Messages With Customers</string>
    <string name="title_activity_login">Sign in</string>
    <string name="nearby_locations">Nearby Locations</string>
    <string name="search_by_item">Search By Item</string>
    <string name="menu_search">Search</string>
    <string name="description">Description</string>
    <string name="item_name">Name</string>
    <string name="price">Price</string>
    <string name="add_photo">Add Photo</string>
    <string name="item_photo_thum">Item Photo Thumbnail</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="menu_refresh">Refresh</string>
    <string name="search_with_text">Search With Text:</string>
    <string name="search_by_category">Search By Category</string>
    <string name="set_shop_location">Set Shop Location</string>
    <string name="action_settings">Settings</string>
    <string name="search">Find an image near you</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="search_hint">Name of the item...</string>

    <string-array name="item_shop_menu_long_press">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string-array name="category_array_search">
        <item>All</item>
        <item>Appliances</item>
        <item>Arts and Crafts</item>
        <item>Automotive</item>
        <item>Baby</item>
        <item>Books</item>
        <item>Clothing</item>
        <item>Home and Kitchen</item>
        <item>Toys</item>
        <item>Video Games</item>
        <item>Miscellaneous</item>
        <item>Music</item>
        <item>Technology</item>
    </string-array>

    <string-array name="category_array_user">
        <item>Appliances</item>
        <item>Arts and Crafts</item>
        <item>Automotive</item>
        <item>Baby</item>
        <item>Books</item>
        <item>Clothing</item>
        <item>Home and Kitchen</item>
        <item>Toys</item>
        <item>Video Games</item>
        <item>Miscellaneous</item>
        <item>Music</item>
        <item>Technology</item>
    </string-array>


    <!-- REQUIRED FOR GENERAL APP FUNCTIONALITY - YOU MAY WANT TO KEEP THESE -->

    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">Create New Account</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_or">or sign in with</string>
    <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_mfa">MFA Code</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="forgot_password_header">Forgot your password?</string>
    <string name="forgot_password_body">Set your new password with the verification code that was sent to you.</string>
    <string name="forgot_password_input_code_hint">Verification code</string>
    <string name="forgot_password_button_hint">Set password</string>
    <string name="mfa_header">MFA verification is required to authenticate.</string>
    <string name="mfa_code_sent_message">Code sent.</string>
    <string name="verify_button_text">Verify</string>
    <string name="username_text">Username</string>
    <string name="given_name_text">Given name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number</string>
    <string name="sign_up_header">Enter the following information to sign up.</string>
    <string name="sign_up_confirm_code">Confirmation code</string>
    <string name="sign_up_confirm_text">Confirm</string>
    <string name="sign_up_confirm_code_sent">A confirmation code was sent.</string>
    <string name="sign_up_confirm_enter_code">Please enter the code below to confirm your account.</string>
    <string name="sign_up_confirm_title">Confirm your account</string>
    <string name="password_change_success">Password change succeeded.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="sign_up_success">Sign up succeeded.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="login_success">Login succeeded.</string>
    <string name="login_failed">Login failed.</string>
    <string name="sign_up_confirm_success">Sign up confirmation succeeded.</string>
    <string name="sign_up_confirm_failed">Sign up confirmation failed.</string>
    <string name="search_title">Search</string>
    <string name="name">Name</string>
    <string name="email_vendor">Email Vendor</string>
    <string name="go_to_vendor_shop">Go To Vendor Shop</string>
    <string name="report_item">Report Item</string>


</resources>
