<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/manage_items_btn"
            android:text="@string/manage_items"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="20sp"
            />

        <Button
            android:id="@+id/close_shop_btn"
            android:text="@string/close_shop"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="20sp"
            />

        <Button
            android:id="@+id/extend_shop_time_btn"
            android:text="@string/extend_shop_time"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="20sp"
            />

        <Button
            android:id="@+id/message_customers_btn"
            android:text="@string/messages_with_customers"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_margin="20sp"
            />
    </LinearLayout>

</ScrollView>