<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nearby_locations"
            android:id="@+id/nearby_locations_text"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:layout_margin="20sp"
            android:text="CLICK TO LAUNCH MAP"
            style="@style/ButtonTheme"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:padding="10sp"
            android:text="@string/search_by_item"
            style="@style/ButtonTheme"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/home_tab"
            style="@style/ButtonTheme"/>


    </LinearLayout>

</ScrollView>