<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center">

        <Spinner
            android:id="@+id/item_category_spinner_search"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_text_height"
            android:entries="@array/category_array_search"/>

        <Button
            android:id="@+id/search_by_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_by_category"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:text="@string/search_with_text"/>

    <SearchView
        android:id="@+id/item_search_view"
        android:layout_width="wrap_content"
        android:background="#fff"
        android:layout_margin="@dimen/sign_in_button_margin"
        android:padding="@dimen/activity_text_padding"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:queryHint="@string/search_title">
    </SearchView>

</LinearLayout>