<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:orientation="vertical"
    tools:context="com.jaramos2409.travelbuy.ShopItemActivity">

    <ImageView
        android:id="@+id/item_photo"
        android:contentDescription="@string/add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@mipmap/ic_add_photo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/item_name"
            android:orientation="vertical">

            <EditText
                android:id="@+id/item_name_text"
                android:layout_width="300dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/item_name"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_edit_text"
            android:layout_below="@id/item_name">

            <EditText
                android:id="@+id/description_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/description"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="2000"
                android:maxLines="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/price_edit_text"
            android:layout_below="@id/description_edit_text">

            <EditText
                android:id="@+id/price_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:hint="@string/price"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_edit_text"
            android:gravity="center">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sign_in_button_height"
                android:id="@+id/item_category"
                android:layout_weight="1"
                android:entries="@array/category_array_user"/>

            <Button
                android:layout_width="@dimen/sign_in_button_width"
                android:layout_height="@dimen/sign_in_button_height"
                android:layout_weight="1"
                android:id="@+id/add_item_button"
                android:text="@string/add_item"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
